Fix fields style of post edit form on small screens

--- a/skins_adm/bootstrap/rsc/css/style.less
+++ b/skins_adm/bootstrap/rsc/css/style.less
@@ -192,27 +192,6 @@ div.avatartag {
 	}
 }
 
-.compose_layout{
-	margin-bottom: 15px;
-	td.label {
-		font-size: 100%;
-		padding-right: 10px;
-		color: #333;
-	}
-	#post_locale {
-		width: 180px !important;
-	}
-	td {
-		white-space: nowrap;
-		vertical-align: middle;
-	}
-}
-#itemform_custom_fields, #itemform_adv_props {
-	.compose_layout {
-		margin-bottom: 0;
-	}
-}
-
 div.log_container {
 	margin: 0;
 }
